Wed Jun 21 11:41:43 2000  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkentry.c gtk/gtkimcontextsimple.c gtk/gtklabel.c
	gtk/gtktexttypes.c gtk/testtext.c modules/linux-fb/basic.c:
	Remove use of libunicode in favor of new GLib functions.

	* gtk/gtkcolorsel.c: Remove conditional includes for FB, win32,
	nano-x, framebuffer. The X11 include is just a hack until we get
	the necessary functions in gdkcolor.h, so there is no reason to
	add other includes of platforms.

	* gtk/gtkwindow.c (gtk_window_compute_default_size): Revert 
	window bigger than the screen change.

        * gtk/testgtk.c: Revert some random changes from Elliot
	that had no particular point and were causing testgtkrc
	not to function correctly.
	
	* gdk/gdkregion-generic.h: Revert change from Elliot. Just
	because GdkSegment and GdkRegionBox have the same fields,
	it doesn't mean that 'typedef GdkSegment GdkRegionBox'
	results in clearer code.

	* gdk/x11/gdkinput-x11.c (gdk_input_common_select_events,
	gdk_input_translate_coordinates): Fix missed GdkObjectification

2000-06-18  Elliot Lee  <sopwith@redhat.com>

	* gdk/Makefile.am, gdk/*/Makefile.am: Fix conditionality to work the "right" way.
	* gtk/gtk{plug,socket}.h: Missed commits from previous.

2000-06-20  Havoc Pennington  <hp@redhat.com>

	* modules/linux-fb/Makefile.am: Make this compile
	without framebuffer enabled

	* gdk/linux-fb/Makefile.am: Add conditional to not build
	framebuffer unless specified in configure

	* gdk/gdkdraw.c (gdk_draw_drawable): Fix bug where I was getting
	the size of the target instead of source if -1 was passed for
	width/height

	* gdk/x11/gdkgeometry-x11.c (gdk_window_compute_position): Fix 
	width/height confusion.

2000-06-19  Havoc Pennington  <hp@redhat.com>

	* gdk/x11/gdkx.h (GDK_WINDOW_XWINDOW): change this to be
	GDK_DRAWABLE_XID. In the future, we probably want to make it
	faster with G_DISABLE_CHECKS turned on.

2000-06-14  Havoc Pennington  <hp@redhat.com>
