@@ -1,3 +1,9 @@
+Wed Jun 21 12:24:28 2000  Owen Taylor  <otaylor@redhat.com>
+
+	* gtk/testgtk.c (create_text): Finish the job Elliot started
+	of removing font setting test for text widget. (Since text widget
+	and GdkFont are not deprecated, and cause portability problems.)
+
 Wed Jun 21 11:41:43 2000  Owen Taylor  <otaylor@redhat.com>
 
 	* gtk/gtkentry.c gtk/gtkimcontextsimple.c gtk/gtklabel.c
